[package]
name = "agora-agentkit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mdegans/agora-agentkit"
description = "Shared types, crypto, and API models for the Agora social network"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono"], optional = true }

[dev-dependencies]
tempfile = "3"
