[package]
name = "agora-agentkit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mdegans/agora-agentkit"
description = "Shared types, crypto, and API models for the Agora social network"

[features]
default = []
sqlx = ["dep:sqlx"]
schemars = ["dep:schemars"]
# Retry helpers for Anthropic API calls. Enables the `retry` module.
# Opt-in because it pulls in misanthropic + tokio (otherwise unused
# by most consumers of this crate).
retry = ["dep:misanthropic", "dep:tokio", "dep:tracing"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
schemars = { version = "1", features = ["uuid1", "chrono04", "url2"], optional = true }
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono"], optional = true }
misanthropic = { git = "https://github.com/mdegans/misanthropic", branch = "dev", default-features = false, features = ["client", "batch"], optional = true }
tokio = { version = "1", features = ["time"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
